# elements

./: LICENSE  README.md  format.sh  run-examples.sh  run-tests.sh  shell.nix
compiler/: README.md  default.nix  elements-compiler.cabal  format.sh
compiler/app/: Main.hs
compiler/src/: Lib.hs
compiler/src/Elements/: AST.hs  Bytecode.hs  Compiler.hs  Parser.hs
compiler/src/Elements/Compiler/: Fragment.hs  Types.hs  Vars.hs
compiler/test/Elements/: CompilerSpec.hs  ParserSpec.hs  Syntax.hs
compiler/test/Elements/Compiler/: FragmentSpec.hs
examples/: simple.el  simple.json
machine/: Cargo.toml
machine/src/: interpreter.rs  locals.rs  main.rs  program.rs  stack.rs  values.rs
